src/objects/Question__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>For Rally Support Customer Community</description>
    <fields>
        <fullName>Alex_Update__c</fullName>
        <label>Alex Update</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assess Your Health</fullName>
                </value>
                <value>
                    <fullName>Biometric Screening and Onsite Events</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Contact Us</fullName>
                </value>
                <value>
                    <fullName>Earn Rewards</fullName>
                </value>
                <value>
                    <fullName>Earn Rewards - Coins and Sweepstakes</fullName>
                </value>
                <value>
                    <fullName>Financial Well-being Tool</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Health Survey</fullName>
                </value>
                <value>
                    <fullName>Health Well-being Rewards Eligibility</fullName>
                </value>
                <value>
                    <fullName>Healthy Actions - Complete a Preventative Cancer Screen</fullName>
                </value>
                <value>
                    <fullName>HWB Rewards - General</fullName>
                </value>
                <value>
                    <fullName>My Information</fullName>
                </value>
                <value>
                    <fullName>Rally Coins and Auctions</fullName>
                </value>
                <value>
                    <fullName>Rally Coins and Donations</fullName>
                </value>
                <value>
                    <fullName>Rally Mobile App</fullName>
                </value>
                <value>
                    <fullName>Rewards Eligibility</fullName>
                </value>
                <value>
                    <fullName>Take Action</fullName>
                </value>
                <value>
                    <fullName>Tracking Earnings</fullName>
                </value>
                <value>
                    <fullName>WB Rewards – General</fullName>
                </value>
                <value>
                    <fullName>Well-being Rewards Eligibility</fullName>
                </value>
                <value>
                    <fullName>Wellness Funds For Your Medical Reimbursement Account (MRA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Channel</label>
        <referenceTo>Sales_Channel__c</referenceTo>
        <relationshipLabel>Frequent Asked Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Link_Text__c</fullName>
        <description>Text to display over any custom/client specific URL pertinent to this article.  Text will display the same for all Articles, however the URL will be client specific.</description>
        <inlineHelpText>Text to display over any custom/client specific URL pertinent to this article.  Text will display the same for all Articles, however the URL will be client specific.</inlineHelpText>
        <label>Custom Link Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>DPSG Non-Union</fullName>
                </value>
                <value>
                    <fullName>DPSG Non-Union Spouses</fullName>
                </value>
                <value>
                    <fullName>DPSG no rewards</fullName>
                </value>
                <value>
                    <fullName>DPSG Union</fullName>
                </value>
                <value>
                    <fullName>Easy Movers 1</fullName>
                </value>
                <value>
                    <fullName>Easy Movers 2</fullName>
                </value>
                <value>
                    <fullName>Erie Default</fullName>
                </value>
                <value>
                    <fullName>Erie Prem Employee Gift</fullName>
                </value>
                <value>
                    <fullName>Erie Prem Opt Out</fullName>
                </value>
                <value>
                    <fullName>Erie Prem Spouse</fullName>
                </value>
                <value>
                    <fullName>Health Alliance Base</fullName>
                </value>
                <value>
                    <fullName>Health Alliance Medicare</fullName>
                </value>
                <value>
                    <fullName>Health Alliance Premium</fullName>
                </value>
                <value>
                    <fullName>Mercer Base</fullName>
                </value>
                <value>
                    <fullName>Nextera Base</fullName>
                </value>
                <value>
                    <fullName>Nextera HRA</fullName>
                </value>
                <value>
                    <fullName>Nextera HSA</fullName>
                </value>
                <value>
                    <fullName>Norfolk Southern Default</fullName>
                </value>
                <value>
                    <fullName>Norfolk Southern Employee</fullName>
                </value>
                <value>
                    <fullName>Norfolk Southern Employee 1-Child</fullName>
                </value>
                <value>
                    <fullName>Norfolk Southern Employee Family</fullName>
                </value>
                <value>
                    <fullName>Norfolk Southern Employee Spouse</fullName>
                </value>
                <value>
                    <fullName>Norfolk Southern EmployeeSpouseFamily</fullName>
                </value>
                <value>
                    <fullName>Optum-360 HIA</fullName>
                </value>
                <value>
                    <fullName>Optum-360 HSA</fullName>
                </value>
                <value>
                    <fullName>Optum-360 No Rewards</fullName>
                </value>
                <value>
                    <fullName>Optum Test Users</fullName>
                </value>
                <value>
                    <fullName>Optum Test Users B</fullName>
                </value>
                <value>
                    <fullName>ProductionTest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Rally_Support__c</fullName>
        <formula>IF(INCLUDES(Group_Name__c, &quot;Rally_Support&quot;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>If Rally Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Common_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Common Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Default_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Publish_Date_Future__c</fullName>
        <description>If the article is scheduled for Publication, this field holds that value until the Article is published.</description>
        <inlineHelpText>If the article is scheduled for Publication, this field holds that value until the Article is published.</inlineHelpText>
        <label>Publish Date (Future)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RichTextSummary__c</fullName>
        <label>Description</label>
        <length>120000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Specific_Group_Client__c</fullName>
        <description>The Group Name of the group/client this article applies to specifically.</description>
        <inlineHelpText>The Group Name of the group/client this article applies to specifically.</inlineHelpText>
        <label>Specific Group/Client</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Question</label>
    <pluralLabel>Questions</pluralLabel>
</CustomObject>